Fixed gap below player image

--- a/client/scss/games.scss
+++ b/client/scss/games.scss
@@ -526,8 +526,11 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			.person-image {
-				max-height: 300pt;
+			.player-image-wrapper {
+				display: flex;
+				.person-image {
+					max-height: 300pt;
+				}
 			}
 			.man-of-steel-table {
 				@include header;
